force-app/main/default/objects/ExpoAirport__c/ExpoAirport__c.object-meta.xml
<CustomObject>
    <label>ExpoAirport</label>
    <nameField>
        <label>ExpoAirport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExpoAirports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>