force-app/main/default/objects/ExpoAirport__c/fields/arrive_time__c.field-meta.xml
<CustomField>
    <fullName>arrive_time__c</fullName>
    <label>arrive_time</label>
    <type>Time</type>
</CustomField>