force-app/main/default/objects/ExpoAirport__c/fields/Exhibition_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Arrangement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Arrangement</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>ExpoAirports</relationshipLabel>
    <relationshipName>ExpoAirports</relationshipName>
    <type>Lookup</type>
</CustomField>