force-app/main/default/objects/ExpoAirport__c/fields/flight_no__c.field-meta.xml
<CustomField>
    <fullName>flight_no__c</fullName>
    <label>flight_no</label>
    <length>100</length>
    <type>Text</type>
</CustomField>