force-app/main/default/objects/ExpoAirport__c/fields/start_time__c.field-meta.xml
<CustomField>
    <fullName>start_time__c</fullName>
    <label>start_time</label>
    <type>Time</type>
</CustomField>