force-app/main/default/objects/ExpoAirport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exhibition_Arrangement__c</columns>
    <columns>ExpoAirport_Name_CN__c</columns>
    <columns>day_range__c</columns>
    <columns>flight_no__c</columns>
    <columns>flight_type__c</columns>
    <columns>arrive_time__c</columns>
    <columns>start_time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>